--- a/index.html
+++ b/index.html
@@ -1,13 +1,69 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Explora nuestra colección de autos clásicos y únicos, incluyendo el icónico Ford Mustang Eleanor 'Pony', el elegante Jaguar E-Type 60 Collection, el legendario Aston Martin DBR1 y el emblemático Lamborghini Miura Jota. Descubre detalles, imágenes y características especiales de estos modelos en exhibición y subasta. Participa en la subasta de manera presencial u online para tener la oportunidad de ser dueño de un verdadero tesoro automovilístico.">
+  <meta name="keywords" content="autos, clasicos, automotriz">
+
+  <title>Modelos Unicos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <link rel="stylesheet" type="text/css" href="./src/assets/style.css">
+</head>
+
+<body class="body-uno">
+  <header>
+    <!--NAVEGADOR-->
+    <section>
+      <div class="titulo-igual">
+        <h1>Classy Cars</h1>
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse  justify-content-center" id="navbarNav">
+            <ul class="inicio-uno navbar-nav ml-auto ">
+              <li class="nav-item inicio">
+                <a href="../index.html" title="INICIO" class=" nav-link ">Inicio</a>
+              </li>
+              <li class="nav-item inicio">
+                <a href="venta.html" title="Autos en venta" class=" nav-link ">En venta</a>
+              </li>
+              <li class="nav-item inicio">
+                <a href="alquiler.html" title="Autos en alquiler" class="nav-link ">En alquiler</a>
+              </li>
+              <li class="nav-item inicio">
+                <a href="sobre-nosotros.html" title="Quienes somos" class="nav-link ">Sobre Nosotros</a>
+              </li>
+              <li class=" nav-item inicio">
+                <a href="modelos-unicos.html" title="Modelos unicos" class="nav-link">Modelos Unicos</a>
+              </li>
+            </ul>
+            <div class="carrito">
+              <a href="#" title="Carrito de compras">
+                  <i class="fas fa-shopping-cart"></i>
+                  <span id="carrito-count" class="carrito-count">5</span>
+              </a>
+          </div>
+          </div>
+        </nav>
+      </div>
+      </div>
+      </nav>
+      </div>
+    </section>
+  </header>
+  <footer>
+  </footer>
+  <script src="carrito.js"></script>
+</body>
 </html>
