--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="Explora nuestra colección de autos clásicos y únicos, incluyendo el icónico Ford Mustang Eleanor 'Pony', el elegante Jaguar E-Type 60 Collection, el legendario Aston Martin DBR1 y el emblemático Lamborghini Miura Jota. Descubre detalles, imágenes y características especiales de estos modelos en exhibición y subasta. Participa en la subasta de manera presencial u online para tener la oportunidad de ser dueño de un verdadero tesoro automovilístico.">
   <meta name="keywords" content="autos, clasicos, automotriz">
 
-  <title>Modelos Unicos</title>
+  <title>Classy Cars</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
